--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
         "advs",
-        "firestore"
+        "customtabs",
+        "firestore",
+        "holo",
+        "taskfirebase"
     ]
 }
